--- a/aboutme.html
+++ b/aboutme.html
@@ -15,5 +15,9 @@
 	  	<li><a href="aboutme.html">about me</a></li>
 	</ul>
 
+	<p>
+		I am a sophomore Computer Science student at the University of Florida. I am currently interested in learning full stack web development, and I am proficient in C++, Java, and HTML.
+	</p>
+
 </body>
 </html>
