--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Abby Pham</title>
+	<title>Abby Pham - Home</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -14,6 +15,12 @@
 	  	<li><a href="resume.html">my resume</a></li>
 	  	<li><a href="aboutme.html">about me</a></li>
 	</ul>
+
+	<div id="icons">
+		<a id="squareic" href="https://github.com/abpham"><i class="fa fa-github-square fa-3x"></i></a>
+
+		<a id="squareic" href="https://www.linkedin.com/in/abigail-pham/"><i class="fa fa-linkedin-square fa-3x"></i></a>
+	</div>
 
 </body>
 </html>
