--- a/index.html
+++ b/index.html
@@ -1,31 +1,98 @@
+<style>
+	.image {
+		background-image: url("img/mountains.jpg");
+	}
+	#first {
+		background-color: #b0bff2;
+	}
+	#second {
+		background-color: #8ea3ed;
+	}
+	#third {
+		background-color: #6b86e5;
+	}
+</style>
+
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
-	<title>Abby Pham - Home</title>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Abby Pham</title>
+	
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+
+    <script src="script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
-	<h1>ABBY PHAM</h1>
+	<!-- nav bar code utilizing bootstrap -->
+  	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id = "navbar-font">
+      	 <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       	 <ul class="navbar-nav">
+         	<li class="nav-item active">
+           		 <a class="nav-link" href="./index.html">home<span class="sr-only">(current)</span></a>
+         	</li>
+         	<li class="nav-item">
+           		 <a class="nav-link" href="./about.html">about</a>
+         	</li>
+         	<li class="nav-item">
+           		 <a class="nav-link" href="./resume.html">resume</a>
+	        </li>
+	        <li class="nav-item">
+	             <a class="nav-link" href="./projects.html">projects</a>
+	        </li>
+       	 </ul>
+     	 </div>
+    </nav>
 
-	<ul>
-		<li><a href="index.html">home</a></li>
-	  	<li><a href="resume.html">my resume</a></li>
-	  	<li><a href="aboutme.html">about me</a></li>
-	</ul>
+    <!-- landing page code -->
+    <div class="image">
+       <div class="text">
+            <h1>Abby Pham</h1>
+            <p id="blurb">student, gator, aspiring developer</p>
+            <p>
+            	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
+            </p>
+        </div>
+    </div>
 
-	<div id="icons">
-		<a id="squareic" href="https://github.com/abpham"><i class="fa fa-github-square fa-3x"></i></a>
+    <!-- blog style posts -->
+    <div id = "first" class = "post">
+        <h1>Post 1</h1>
+        <p>
+            	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('second'))">next</button>
+        </p>
+    	<p id = "paragraph-post">
+        To be filled in later!
+    	</p>
+    </div>
 
-		<a id="squareic" href="https://www.linkedin.com/in/abigail-pham/"><i class="fa fa-linkedin-square fa-3x"></i></a>
-	</div>
+    <div id = "second" class = "post">
+        <h1>Post 2</h1>
+        <p>
+            	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('third'))">next</button>
+        </p>
+    	<p id = "paragraph-post">
+        To be filled in later!
+    	</p>
+    </div>
+    
+    <div id = "third" class = "post">
+        <h1>Post 3</h1>
+        <p>
+            	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('navbarNavDropdown'))">back</button>
+        </p>
+    	<p id = "paragraph-post">
+        To be filled in later!
+    	</p>
+    </div>
 
 </body>
-</html>
