--- a/resume.html
+++ b/resume.html
@@ -1,22 +1,67 @@
+<style>
+	.image {
+		background-image: url("img/purpsky.jpg");
+	}
+	#first {
+		background: #f7c3ed;
+	}
+</style>
+
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
+
 	<title>Abby Pham - Resume</title>
 
-	<link rel="stylesheet" type="text/css" href="style.css">
-	
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+
+    <script src="script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
-	<h1>RESUME</h1>
-	
-	<ul>
-		<li><a href="index.html">home</a></li>
-	  	<li><a href="resume.html">my resume</a></li>
-	 	<li><a href="aboutme.html">about me</a></li>
-	</ul>
+	<!-- nav bar code utilizing bootstrap -->
+  	<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id = "navbar-font">
+      	 <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       	 <ul class="navbar-nav">
+         	<li class="nav-item active">
+           		 <a class="nav-link" href="./index.html">home<span class="sr-only">(current)</span></a>
+         	</li>
+         	<li class="nav-item">
+           		 <a class="nav-link" href="./about.html">about</a>
+         	</li>
+         	<li class="nav-item">
+           		 <a class="nav-link" href="./resume.html">resume</a>
+	        </li>
+	        <li class="nav-item">
+	             <a class="nav-link" href="./projects.html">projects</a>
+	        </li>
+       	 </ul>
+     	 </div>
+    </nav>
 
-	<iframe src="https://resume.creddle.io/embed/6hrlawrn31m" width="850" height="1100" seamless></iframe>
+    <!-- landing page code -->
+    <div class="image">
+       <div class="text">
+            <h1>Abby Pham</h1>
+            <p id="blurb">sophomore cs student looking for internships</p>
+            <p>
+            	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
+            </p>
+        </div>
+    </div>
+
+    <!-- blog style posts -->
+    <div id = "first" class = "post">
+        <h3>Resume</h3>
+        <embed src = "abbyphamresume2018.pdf" type="application/pdf" width="100%" height="80%"></embed>
+    </div>
 
 </body>
-</html>
