added project cards

--- a/about.html
+++ b/about.html
@@ -73,10 +73,14 @@
         interested in learning full stack web development and software engineering. I will be graduating in May of 2021 and am 
         currently enrolled in Data Structures and Algorithms, Calculus 3, and Physics 2.
         </p>
+        <p id="contactInfo">
+            abbypham9301@gmail.com
+            <br/>Gainesville, Florida
+            <br/>(904) 612-4350
+        </p>
         <!-- icons with links -->
-        <a href = "https://www.spotify.com"><i class="fa fa-spotify fa-2x" aria-hidden="true"></i></a>
         <a href = "https://github.com/abpham"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-        <a href = "https://www.linkedin.com/in/abigail-pham/"><i class="fa fa-linkedin-in fa-2x"></i></a>
+        <a href = "https://www.linkedin.com/in/abigail-pham/"><i class="fa fa-linkedin-in fa-2x" aria-hidden="true"></i></a>
     </div>
 
 
