--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
     <div class="image">
        <div class="text">
             <h1>Abby Pham</h1>
-            <p id="blurb">sophomore cs student looking for internships</p>
+            <p id="blurb">sophomore cs student looking for internships! resume below!</p>
             <p>
             	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
             </p>
