--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,9 @@
+<style>
+  body {
+    background-color: #b0bff2;
+  }
+</style>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -36,14 +42,22 @@
      	 </div>
     </nav>
 
-    <!-- landing page code -->
-    <div class="image">
-       <div class="text">
-            <h1>Abby Pham</h1>
-            <p>student, gator, developer</p>
-            <p>
-            	<button type="button" class="btn btn-outline-light" onclick="...">content</button>
-            </p>
+    <!-- begin bootstrap card components -->
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Lexical Analysis</h5>
+          <p class="card-text">A COP3503 assignment with pseudocode string parsing and processing.</p>
+          <a href="https://github.com/abpham/lexical-analysis" class="btn btn-primary">Visit on Github</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Linked List Line Editor</h5>
+          <p class="card-text">A COP3530 assignment to create a line editor with a linked list data structure.</p>
+          <a href="https://github.com/abpham/linked-list-line-editor" class="btn btn-primary">Visit on Github</a>
         </div>
     </div>
 
