updated current classes in about me page

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <p id = "paragraph-post">
         I am a sophomore Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I'm
         interested in learning full stack web development and software engineering. I will be graduating in May of 2021 and am 
-        currently enrolled in Data Structures and Algorithms, Calculus 3, and Physics 2.
+        currently enrolled in Intro to Software Engineering, Intro to Computer Organization, and Differential Equations.
         </p>
         <p id="contactInfo">
             abbypham9301@gmail.com
