--- a/projects.html
+++ b/projects.html
@@ -43,21 +43,48 @@
     </nav>
 
     <!-- begin bootstrap card components -->
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Lexical Analysis</h5>
-          <p class="card-text">A COP3503 assignment with pseudocode string parsing and processing.</p>
-          <a href="https://github.com/abpham/lexical-analysis" class="btn btn-primary">Visit on Github</a>
-        </div>
+    <div class="row">
+      <div class="col-sm-3">
+          <div class="card">
+              <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Lexical Analysis</h5>
+                  <p class="card-text">A COP3503 assignment with pseudocode string parsing and processing.</p>
+                  <a href="https://github.com/abpham/lexical-analysis" class="btn btn-primary">Visit on Github</a>
+                </div>
+            </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+              <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Linked List Line Editor</h5>
+                  <p class="card-text">A COP3530 assignment to create a line editor with a linked list data structure.</p>
+                  <a href="https://github.com/abpham/linked-list-line-editor" class="btn btn-primary">Visit on Github</a>
+                </div>
+            </div>
+      </div>
+      <div class="col-sm-3">
+          <div class="card">
+              <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Bodega</h5>
+                  <p class="card-text">A CEN3031 Final Project web application built for The Bodega at UF's Innovation Hub.</p>
+                  <a href="https://github.com/swegroup3/final_project" class="btn btn-primary">Visit on Github</a>
+                </div>
+          </div>
+      </div>
     </div>
-
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Linked List Line Editor</h5>
-          <p class="card-text">A COP3530 assignment to create a line editor with a linked list data structure.</p>
-          <a href="https://github.com/abpham/linked-list-line-editor" class="btn btn-primary">Visit on Github</a>
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="card">
+                <img class="card-img-top" src="img/table.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Character Sorter</h5>
+                    <p class="card-text">A COP3502 assignment with a sorted analysis and count of characters in strings.</p>
+                    <a href="https://github.com/abpham/char-sorter" class="btn btn-primary">Visit on Github</a>
+                  </div>
+              </div>
         </div>
     </div>
 
