minor changes from soph to junior, etc.

--- a/about.html
+++ b/about.html
@@ -69,9 +69,9 @@
     <div id = "first" class = "post">
         <h1>About Me</h1>
         <p id = "paragraph-post">
-        I am a sophomore Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I'm
+        I am a Junior Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I'm
         interested in learning full stack web development and software engineering. I will be graduating in May of 2021 and am 
-        currently enrolled in Intro to Software Engineering, Intro to Computer Organization, and Differential Equations.
+        currently enrolled in Operating Systems, Information and Database Systems, and Engineering Statistics.
         </p>
         <p id="contactInfo">
             abbypham9301@gmail.com
