--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
     <div class="image">
        <div class="text">
             <h1>Abby Pham</h1>
-            <p id="blurb">sophomore cs student looking for internships! resume below!</p>
+            <p id="blurb">junior cs student looking for summer internships! resume below!</p>
             <p>
             	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
             </p>
@@ -60,7 +60,8 @@
 
     <!-- blog style posts -->
     <div id = "first" class = "post">
-        <h3>Resume</h3>
+		<h3>Resume</h3>
+		<!-- insert resume here -->
         <embed src = "abbyphamresume2019july.pdf" type="application/pdf" width="100%" height="80%"></embed>
     </div>
 
