added first post, polished about page and removed private projects

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
         background-image: url("img/seaclouds.jpg");
     }
     #first {
-        background-color: #f7cea3;
+        background-color: #fccc97;
     }
     i {
         color: white;
@@ -69,12 +69,12 @@
     <div id = "first" class = "post">
         <h1>About Me</h1>
         <p id = "paragraph-post">
-        I am a Junior Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I'm
-        interested in learning full stack web development and software engineering. I will be graduating in May of 2021 and am 
-        currently enrolled in Operating Systems, Information and Database Systems, and Engineering Statistics.
+        I am a Junior Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I can 
+        be found watching the Great British Bake Off, listening to Passion Pit, and of course, coding! I'm interested in learning full stack web development and software engineering. 
+        I will be graduating in May of 2021 and am currently enrolled in Operating Systems, Information and Database Systems 1, and Engineering Statistics.
         </p>
         <p id="contactInfo">
-            abbypham9301@gmail.com
+            <br/>abbypham9301@gmail.com
             <br/>Gainesville, Florida
             <br/>(904) 612-4350
         </p>
