added responsive web design to posts using bootstrap

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <!-- blog style posts -->
+	<!-- blog style posts -->
     <div id = "first" class = "post">
 		<h1>UF Exchange at HKUST</h1>
         <p>
@@ -77,9 +77,17 @@
     	<p id = "paragraph-post">
 		This past summer (summer of 2019) I studied abroad in Hong Kong, at the Hong Kong University of Science and Technology on a UF Exchange program! It was an incredible experience, and so fulfilling to travel independently while learning about a different culture and trying so many different foods.
 		</p>
-		<img src="img/brucelee.jpg" class="img-fluid" alt="brucelee">
-		<img id="middleImage" src="img/pinebuns.jpg" class="img-fluid" alt="pineapple bun making">
-		<img src="img/buddha.jpg" class="img-fluid" alt="big buddha">
+		<div class="row">
+			<div class="col-sm-4">
+				<img src="img/brucelee.jpg" class="img-fluid" alt="brucelee">
+			</div>
+			<div class="col-sm-4">
+				<img id="middleImage" src="img/pinebuns.jpg" class="img-fluid" alt="pineapple bun making">
+			</div>
+			<div class="col-sm-4">
+					<img src="img/buddha.jpg" class="img-fluid" alt="big buddha">
+			</div>
+		</div>
     </div>
 
     <div id = "second" class = "post">
