--- a/about.html
+++ b/about.html
@@ -70,8 +70,11 @@
         <h1>About Me</h1>
         <p id = "paragraph-post">
         I am a Junior Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I can 
-        be found watching the Great British Bake Off, listening to Passion Pit, and of course, coding! I'm interested in learning full stack web development and software engineering. 
+        be found watching the Great British Bake Off, listening to Passion Pit, and of course, coding! I'm interested in learning everything software engineering and working on
+        impactful projects. 
         I will be graduating in May of 2021 and am currently enrolled in Operating Systems, Information and Database Systems 1, and Engineering Statistics.
+        <br><br>
+        This coming summer, I will be interning as a SWE Intern at Microsoft in Redmond, WA!
         </p>
         <p id="contactInfo">
             <br/>abbypham9301@gmail.com
