--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="image">
        <div class="text">
             <h1>Abby Pham</h1>
-            <p id="blurb">student, gator, aspiring developer</p>
+            <p id="blurb">cs student, gator, aspiring developer</p>
             <p>
             	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
             </p>
