Updating resume and info

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('second'))">next</button>
         </p>
     	<p id = "paragraph-post">
-		This past summer (summer of 2019) I studied abroad in Hong Kong, at the Hong Kong University of Science and Technology on a UF Exchange program! It was an incredible experience, and so fulfilling to travel independently while learning about a different culture and trying so many different foods.
+		In the summer of 2019, I studied abroad in Hong Kong, at the Hong Kong University of Science and Technology on a UF Exchange program! It was an incredible experience, and so fulfilling to travel independently while learning about a different culture and trying so many different foods.
 		</p>
 		<div class="row">
 			<div class="col-sm-4">
