--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
     <div class="image">
        <div class="text">
             <h1>Abby Pham</h1>
-            <p id="blurb">junior cs student! resume below!</p>
+            <p id="blurb">senior cs student! resume below!</p>
             <p>
             	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
             </p>
@@ -62,7 +62,7 @@
     <div id = "first" class = "post">
 		<h3>Resume</h3>
 		<!-- insert resume here -->
-        <embed src = "abbyphamresume2019july.pdf" type="application/pdf" width="100%" height="80%"></embed>
+        <embed src = "Pham_Abigail_July2020.pdf" type="application/pdf" width="100%" height="80%"></embed>
     </div>
 
 </body>
