--- a/about.html
+++ b/about.html
@@ -69,17 +69,16 @@
     <div id = "first" class = "post">
         <h1>About Me</h1>
         <p id = "paragraph-post">
-        I am a Junior Computer Science student at the University of Florida. Besides studying and trying to get some sleep, I can 
+        I am a Senior at the University of Florida, majoring in Computer Science. Besides studying and trying to get some sleep, I can 
         be found watching the Great British Bake Off, listening to Passion Pit, and of course, coding! I'm interested in learning everything software engineering and working on
         impactful projects. 
-        I will be graduating in May of 2021 and am currently enrolled in Operating Systems, Information and Database Systems 1, and Engineering Statistics.
+        I will be graduating in May of 2021 and am looking for a full time position for after that.
         <br><br>
-        This coming summer, I will be interning as a SWE Intern at Microsoft in Redmond, WA!
+        This summer, I have been interning remotely with Microsoft as a SWE Intern in Commercial Software Engineering.
         </p>
         <p id="contactInfo">
             <br/>abbypham9301@gmail.com
             <br/>Gainesville, Florida
-            <br/>(904) 612-4350
         </p>
         <!-- icons with links -->
         <a href = "https://github.com/abpham"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
