--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
     <div id = "first" class = "post">
 		<h3>Resume</h3>
 		<!-- insert resume here -->
-        <embed src = "Pham_Abigail_July2020.pdf" type="application/pdf" width="100%" height="80%"></embed>
+        <embed src = "Pham_Abigail_2020.pdf" type="application/pdf" width="100%" height="80%"></embed>
     </div>
 
 </body>
