Updated projects page style + blog post

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
         impactful projects. 
         I will be graduating in May of 2021 and am looking for a full time position for after that.
         <br><br>
-        This summer, I have been interning remotely with Microsoft as a SWE Intern in Commercial Software Engineering.
+        This past summer, I interned remotely with Microsoft, and will return as a FTE next year!
         </p>
         <p id="contactInfo">
             <br/>abbypham9301@gmail.com
