--- a/about.html
+++ b/about.html
@@ -72,9 +72,7 @@
         I am a Senior at the University of Florida, majoring in Computer Science. Besides studying and trying to get some sleep, I can 
         be found watching the Great British Bake Off, listening to Passion Pit, and of course, coding! I'm interested in learning everything software engineering and working on
         impactful projects. 
-        I will be graduating in May of 2021 and am looking for a full time position for after that.
-        <br><br>
-        This past summer, I interned remotely with Microsoft, and will return as a FTE next year!
+        I will be graduating in May of 2021. This past summer, I interned remotely with Microsoft, and will be returning as a SWE FTE next year.
         </p>
         <p id="contactInfo">
             <br/>abbypham9301@gmail.com
