removed paragraph from project page

--- a/projects.html
+++ b/projects.html
@@ -50,11 +50,8 @@
 
     <!-- begin bootstrap card components -->
     <div class="container">
+      <div class="row justify-content-center"><h2>Project Portfolio</h2></div>
       <div class="row justify-content-center">
-        <h2>Project Portfolio</h2>
-        <p>These are projects that I have open as public repositories on my GitHub. Feel free to peruse! A lot of them are class projects but I am working on some personal/side projects as well.
-          <br><br> To visit my GitHub profile, you can go <a href="https://github.com/abpham">here!</a>
-        </p>
         <div class="col-sm">
           <div class="card">
             <div class="card-header">C++</div>
@@ -85,7 +82,7 @@
                 </div>
           </div>
       </div>
-        </div>
+      </div>
     </div>
 
 </body>
