updated after graduation

--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@
     <div id = "first" class = "post">
         <h1>About Me</h1>
         <p id = "paragraph-post">
-        I am a Senior at the University of Florida, majoring in Computer Science. Besides studying and trying to get some sleep, I can 
-        be found watching the Great British Bake Off, listening to Passion Pit, and of course, coding! I'm interested in learning everything software engineering and working on
+        I am a recent grad from the University of Florida, and majored in Computer Science with a minor in Mathematics. Besides trying to get some sleep, I can 
+        be found watching the Great British Bake-off and listening to music (Passion Pit! And Paramore). I'm interested in learning everything software and working on
         impactful projects. 
-        I will be graduating in May of 2021. This past summer, I interned remotely with Microsoft, and will be returning as a SWE FTE next year.
+        I interned with CSE at Microsoft in 2020 and will be returning as a FTE.
         </p>
         <p id="contactInfo">
             <br/>abbypham9301@gmail.com
