--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="image">
        <div class="text">
             <h1>Abby Pham</h1>
-            <p id="blurb">cs student, gator, aspiring developer</p>
+            <p id="blurb">uf cs alum, msft swe</p>
             <p>
             	<button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('first'))">content</button>
             </p>
@@ -71,14 +71,36 @@
     </div>
 
 	<!-- blog style posts -->
+
+	<!-- first post -->
     <div id = "first" class = "post">
-        <h1>Remote Internship at Microsoft</h1>
+        <h1>UF Graduation</h1>
         <p>
             <button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('second'))">next</button>
         </p>
-    	<p id = "paragraph-post">
-		This past summer I interned remotely with Microsoft in CSE (Commercial Software Engineering). I had an incredible experience despite the virtual circumstances and learned so much while working with my wonderful team.
-		I have also been given the opportunity to start living in the PNW next year and work for Microsoft as a FTE after I graduate!
+		<p id = "paragraph-post">
+			May 1, 2021 I graduated from the University of Florida with a B.S. in Computer Science and minor in Mathematics.
+			I am so fortunate to be able to return to Microsoft as an FTE starting in July 2021!
+		</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+					<img src="img/grad.jpg" class="img-fluid" alt="graduation pic">
+				</div>
+			</div>
+		</div>
+
+    </div>
+
+	<!-- second post -->
+    <div id = "second" class = "post">
+		<h1>Remote Internship at Microsoft</h1>
+        <p>
+            <button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('third'))">next</button>
+        </p>
+		<p id = "paragraph-post">
+			This past summer in 2020 I interned remotely with Microsoft in CSE (Commercial Software Engineering). I had an incredible experience despite the virtual circumstances and learned so much while working with my wonderful team.
+			I have also been given the opportunity to start living in the PNW next year and work for Microsoft as a FTE after I graduate!
 		</p>
 		<div class="container">
 			<div class="row">
@@ -88,14 +110,15 @@
 			</div>
 		</div>
     </div>
-
-    <div id = "second" class = "post">
-		<h1>UF Exchange at HKUST</h1>
+    
+	<!-- third post -->
+    <div id = "third" class = "post">
+        <h1>UF Exchange at HKUST</h1>
         <p>
-            <button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('third'))">next</button>
+            <button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('navbarNavDropdown'))">back</button>
         </p>
-    	<p id = "paragraph-post">
-		In the summer of 2019, I studied abroad in Hong Kong, at the Hong Kong University of Science and Technology on a UF Exchange program! It was an incredible experience, and so fulfilling to travel independently while learning about a different culture and trying so many different foods.
+		<p id = "paragraph-post">
+			In the summer of 2019, I studied abroad in Hong Kong, at the Hong Kong University of Science and Technology on a UF Exchange program! It was an incredible experience, and so fulfilling to travel independently while learning about a different culture and trying so many different foods.
 		</p>
 		<div class="container">
 			<div class="row">
@@ -110,16 +133,6 @@
 				</div>
 			</div>
 		</div>
-    </div>
-    
-    <div id = "third" class = "post">
-        <h1>Post 3</h1>
-        <p>
-            <button type="button" class="btn btn-outline-light" onclick="smoothScroll(document.getElementById('navbarNavDropdown'))">back</button>
-        </p>
-    	<p id = "paragraph-post">
-        To be filled in later!
-    	</p>
     </div>
 
 </body>
