--- a/about.html
+++ b/about.html
@@ -72,11 +72,14 @@
         I am a recent grad from the University of Florida, and majored in Computer Science with a minor in Mathematics. Besides trying to get some sleep, I can 
         be found watching the Great British Bake-off and listening to music (Passion Pit! And Paramore). I'm interested in learning everything software and working on
         impactful projects. 
-        I interned with CSE at Microsoft in 2020 and will be returning as a FTE.
+        I interned with CSE at Microsoft in the summer of 2020, and am working as an FTE in the same org now- this time, in Solution Areas. Now, I'm helping customer
+        engineers and citzen-devs use Power Platform to accelerate their businesses.
+
+        Reach out anytime if you want to chat :)
         </p>
         <p id="contactInfo">
             <br/>abbypham9301@gmail.com
-            <br/>Gainesville, Florida
+            <br/>Seattle, WA
         </p>
         <!-- icons with links -->
         <a href = "https://github.com/abpham"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
