--- a/projects.html
+++ b/projects.html
@@ -48,10 +48,11 @@
      	 </div>
     </nav>
 
+    <h2>Project Portfolio</h2>
+    
     <!-- begin bootstrap card components -->
     <div class="container">
-      <div class="row justify-content-center"><h2>Project Portfolio</h2></div>
-      <div class="row justify-content-center">
+      <div class="row">
         <div class="col-sm">
           <div class="card">
             <div class="card-header">C++</div>
@@ -81,7 +82,7 @@
                   <a href="https://github.com/abpham/magic-squares" class="card-link">Visit on Github</a>
                 </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
 
