trying to fix picture lol

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm">
-					<img src="img/grad.jpg" class="img-fluid" alt="graduation pic">
+					<img src="img/graduation.jpg" class="img-fluid" alt="graduation pic">
 				</div>
 			</div>
 		</div>
