fixed alignment / flex on project page

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,13 @@
     font-family: 'Work-Sans', sans-serif;
     padding-top: 15px;
   }
+  .card {
+    margin-left: 0px !important;
+    margin-top: 50px !important;
+  }
+  #projectTitleRow {
+    justify-content: center;
+  }
 </style>
 
 <!DOCTYPE html>
@@ -48,10 +55,12 @@
      	 </div>
     </nav>
 
-    <h2>Project Portfolio</h2>
     
     <!-- begin bootstrap card components -->
     <div class="container">
+      <div id="projectTitleRow" class="row">
+        <h2>Project Portfolio</h2>
+      </div>
       <div class="row">
         <div class="col-sm">
           <div class="card">
