added a project and fixed flex css

--- a/projects.html
+++ b/projects.html
@@ -8,12 +8,13 @@
     font-family: 'Work-Sans', sans-serif;
     padding-top: 15px;
   }
-  .card {
-    margin-left: 0px !important;
-    margin-top: 50px !important;
-  }
   #projectTitleRow {
     justify-content: center;
+  }
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 </style>
 
@@ -73,16 +74,6 @@
             </div>
         </div>
         <div class="col-sm">
-            <div class="card">
-              <div class="card-header">HTML, CSS, Javascript</div>
-                  <div class="card-body">
-                    <h5 class="card-title">Bodega</h5>
-                    <p class="card-text">A CEN3031 Final Project web application built for The Bodega at UF's Innovation Hub.</p>
-                    <a href="https://github.com/swegroup3/final_project" class="card-link">Visit on Github</a>
-                  </div>
-            </div>
-        </div>
-        <div class="col-sm">
           <div class="card">
             <div class="card-header">C++</div>
                 <div class="card-body">
@@ -92,6 +83,30 @@
                 </div>
           </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <div class="card">
+            <div class="card-header">Java</div>
+                <div class="card-body">
+                  <h5 class="card-title">ANTLR Pascal Evaluation</h5>
+                  <p class="card-text">
+                    A COP4020 assignment where I designed a grammar in ANTLR for the programming language Pascal that when compiled in Java, evaluates a generated parse tree.
+                  </p>
+                  <a href="https://github.com/abpham/pascal-project2" class="card-link">Visit on Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <div class="card-header">HTML, CSS, Javascript</div>
+                <div class="card-body">
+                  <h5 class="card-title">Bodega</h5>
+                  <p class="card-text">A CEN3031 Final Project web application built for The Bodega at UF's Innovation Hub.</p>
+                  <a href="https://github.com/swegroup3/final_project" class="card-link">Visit on Github</a>
+                </div>
+          </div>
+      </div>      
       </div>
     </div>
 
