--- a/about.html
+++ b/about.html
@@ -69,11 +69,11 @@
     <div id = "first" class = "post">
         <h1>About Me</h1>
         <p id = "paragraph-post">
-        I am a recent grad from the University of Florida, and majored in Computer Science with a minor in Mathematics. Besides trying to get some sleep, I can 
+        I graduated from the University of Florida in 2021, and majored in Computer Science with a minor in Mathematics. Besides trying to get some sleep, I can 
         be found watching the Great British Bake-off and listening to music (Passion Pit! And Paramore). I'm interested in learning everything software and working on
         impactful projects. 
-        I interned with CSE at Microsoft in the summer of 2020, and am working as an FTE in the same org now- this time, in Solution Areas. Now, I'm helping customer
-        engineers and citzen-devs use Power Platform to accelerate their businesses.
+        I interned with ISE (Industry Software Engineering) at Microsoft in the summer of 2020, and am working as an FTE in the same org now- this time, in SolutionOps. Now, I'm working primarily in
+        data-related Azure solutions and Microsoft Fabric.
 
         Reach out anytime if you want to chat :)
         </p>
