--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
          	<li class="nav-item">
            		 <a class="nav-link" href="./resume.html">resume</a>
 	        </li>
-	        <li class="nav-item">
+	        <!-- <li class="nav-item">
 	             <a class="nav-link" href="./projects.html">projects</a>
-	        </li>
+	        </li> -->
        	 </ul>
      	 </div>
     </nav>
